fix: information alignment

--- a/css/categories.css
+++ b/css/categories.css
@@ -34,6 +34,7 @@
 
 .categories .card h3 {
   font-weight: var(--title-weight);
+  margin-top: auto;
 }
 
 @media (min-width: 768px) {
