--- a/css/popular-destinations.css
+++ b/css/popular-destinations.css
@@ -10,6 +10,11 @@
 .popular-destinations .card {
     max-width: 648px;
     min-width: 312px;
+    display: flex;
+    flex-direction: column;
+}
+.popular-destinations .card .button{
+    margin-top: auto;
 }
 .popular-destinations .card img {
     display: block;
